--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "dependencies": {
     "@farcaster/core": "^0.14.3",
     "@noble/ed25519": "^2.0.0",
-    "@xmtp/frames-validator": "^0.5.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@vercel/kv": "^1.0.1",
+    "@xmtp/frames-validator": "^0.5.0",
+    "@zoralabs/zdk": "^2.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "frames.js": "^0.6.0",
